adding more styles and setting up server and livereload tasks

--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,163 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title></title>
+<meta charset="UTF-8">
+<title></title>
+<link href="/css/style.css" rel="stylesheet" />
+<script src="/js/script.min.js" type="text/javascript"></script>
 </head>
 <body>
-    Hi 
+
+<header>
+    <nav class="navbar navbar-fixed-top navbar-inverse" role="navigation">
+        <div class="container">
+            <div class="container-fluid">
+                <!-- Brand and toggle get grouped for better mobile display -->
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-1">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="#">
+                        <div class="logobox">
+                            <div class="square">
+                                <div class="rectangle-1"></div>
+                                <div class="rectangle-yellow"></div>
+                                <div class="rectangle-2"></div>
+                                <div class="rectangle-3"></div>
+                                <p class="logotitle" data-toggle="tooltip" data-placement="top" title="Public Entrance Exam Coaching Sceme">PEECS</p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+
+                <!-- Collect the nav links, forms, and other content for toggling -->
+                <div class="collapse navbar-collapse" id="navbar-collapse-1">
+                    <form class="navbar-form navbar-right" role="search">
+                        <div class="form-group">
+                            <input type="text" class="form-control" placeholder="Search">
+                        </div>
+                        <button type="submit" class="btn btn-default"><i class="glyphicon glyphicon-chevron-right"></i></button>
+                    </form>
+                    <ul class="nav navbar-nav navbar-right">
+                        <li class="active"><a href="#">HOME<span class="sr-only">(current)</span></a></li>
+                        <li><a href="#">ABOUT</a></li>
+                        <li><a href="#">VIDEOS</a></li>
+                        <li><a href="#">LINKS</a></li>
+                        <li><a href="#">CONTACT</a></li>
+                        <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">TEAM<span class="caret"></span></a>
+                        <ul class="dropdown-menu" role="menu">
+                            <li><a href="#">Action</a></li>
+                            <li><a href="#">Another action</a></li>
+                            <li><a href="#">Something else here</a></li>
+                            <li class="divider"></li>
+                            <li><a href="#">Separated link</a></li>
+                            <li class="divider"></li>
+                            <li><a href="#">One more separated link</a></li>
+                        </ul>
+                        </li>
+                    </ul>
+                </div><!-- /.navbar-collapse -->
+            </div><!-- /.container-fluid -->
+        </div>
+    </nav>
+
+    <div class="circle-login">
+        <div class="circle">
+            <p class="login"><a href="#">Login</a></p>
+        </div>
+    </div>
+</header>
+<div class="videowall">
+    <div class="container">
+        <div class="custom row">
+            <div class="box-1 col-md-3"></div>
+            <div class="col-md-3"></div>
+            <div class="col-md-3"></div>
+            <div class="col-md-3"></div>
+        </div>
+    </div>
+</div> <!-- closing video wall-->
+<div class="container">
+    <div class="middlenav">
+        <ul>
+            <li><a href="#">PEECS TIMES</a></li>
+            <li><a href="#">BEST SCHOOLS</a></li>
+            <li><a href="#">RESOURCES</a></li>
+            <li><a href="#">PEECS GURUS</a></li>
+        </ul>
+    </div> <!-- closing middlenav-->
+</div> 
+
+<div class="container style">
+    <div class="col-md-4">
+        <p class="col text-center"><strong>Entrance Coaching Scheme of Govt </strong></p>
+        <p class="text-para">April 13,2013: The Public Entrance Examination Coaching Scheme (PEECS) of the Government of Kerala will take off in June 2013.
+        The Programme was announced in the Budget for 2013-14 by the Finance Minister.</p>
+        <button class="navibar-btn">Know more</button>
+    </div>
+    <div class="col-md-4">
+        <p class="col text-center"><strong>Entrance Coaching Scheme of Govt </strong></p>
+        <p class="text-para">April 13,2013: The Public Entrance Examination Coaching Scheme (PEECS) of the Government of Kerala will take off in June 2013.
+        The Programme was announced in the Budget for 2013-14 by the Finance Minister.</p>
+    </div>
+    <div class="col-md-4">
+        <p class="col text-center"><strong>Entrance Coaching Scheme of Govt </strong></p>
+        <p class="text-para">April 13,2013: The Public Entrance Examination Coaching Scheme (PEECS) of the Government of Kerala will take off in June 2013.
+        The Programme was announced in the Budget for 2013-14 by the Finance Minister.</p>
+    </div>
+</div> <!-- closing Container style-->
+<footer>
+    <p class="text-center"><strong>“ LIVE AS IF YOU WERE TO DIE TOMORROW. LEARN AS IF YOU WERE TO LIVE FOREVER ”<br>
+        <small>- MAHATMA GANDHI</small></strong></p>
+    <div class="line-end"></div>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-md-2">
+                <ul>
+                    <li class="foothead">GENERAL</li>
+                    <li><a href="#">HOME</a></li>
+                    <li><a href="#">ABOUT</a></li>
+                    <li><a href="#">VIDEOS</a></li>
+                    <li><a href="#">CONTACT</a></li>
+                </ul>
+            </div>
+            <div class="col-md-2">
+                <ul>
+                    <li>&nbsp;</li>
+                    <li><a href="#">ENTRANCE EXAM</a></li>
+                    <li><a href="#">TERMS OF USE</a></li>
+                    <li><a href="#">LINKS</a></li>
+                </ul>
+            </div>
+            <div class="mid col-md-4">
+                <ul>
+                    <li class="text-center">SOCIAL</li>
+
+                </ul>
+            </div>
+            <div class="col-md-2">
+                <ul>
+                    <li class="foothead">LEGAL</li>
+                    <li><a href="#">PRIVACY POLICY</a></li>
+                    <li><a href="#">TERMS OF USE</a></li>
+                </ul>
+            </div>
+            <div class="col-md-2">
+                <ul>
+                    <li class="foothead">CONTACT</li>
+                    <p class="contact">Trivandrum,<br>Keralapeecs@<br>itschool.gov.in</p>
+                </ul>
+            </div>
+        </div> <!-- closing row -->
+    </div> <!-- closing container -->
+    <p class="copyright-center">© 2014-2015 PEECS. All Rights Reserved.</p>
+</footer>
+<script>
+</script>
 </body>
 </html>
